# abcg

./: README.md
abcg/: abcg_application.cpp
examples/: CMakeLists.txt
examples/backrooms/: CMakeLists.txt  ecs.hpp  gl_window.cpp  gl_window.hpp  input.hpp  main.cpp
examples/backrooms/asset_manager/: asset.hpp  asset_manager.cpp  asset_manager.hpp  mesh_asset.hpp  shader_asset.hpp
examples/backrooms/assets/shaders/: unlit.vs.glsl
examples/backrooms/components/: camera_controller_component.hpp  material_component.hpp  mesh_component.hpp  transform.hpp  transform_component.hpp
examples/backrooms/level/: level.cpp  level.hpp
examples/backrooms/rendering/: camera.cpp  camera.hpp  mesh.cpp  mesh.hpp  transform.cpp  transform.hpp
examples/backrooms/systems/: camera_system.cpp  camera_system.hpp  mesh_renderer.cpp  mesh_renderer.hpp
examples/sponza/: CMakeLists.txt  ecs.hpp  gl_window.cpp  gl_window.hpp  input.cpp  input.hpp  main.cpp
examples/sponza/asset_manager/: asset.cpp  asset.hpp  asset_manager.cpp  asset_manager.hpp  mesh_asset.cpp  mesh_asset.hpp  shader_asset.cpp  shader_asset.hpp  texture_asset.cpp  texture_asset.hpp
examples/sponza/assets/models/: sponza.mtl
examples/sponza/assets/shaders/: #deferred.fs.glsl#  deferred.fs.glsl  deferred.vs.glsl  gbuffer.fs.glsl  gbuffer.vs.glsl  shadow.fs.glsl  shadow.vs.glsl  unlit.fs.glsl  unlit.vs.glsl
examples/sponza/components/: camera_controller_component.hpp  material_component.hpp  mesh_component.hpp  transform_component.hpp
examples/sponza/events/: resize_window_event.hpp
examples/sponza/level/: level.cpp  level.hpp
examples/sponza/rendering/: camera.cpp  camera.hpp  light.cpp  light.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  render_target.cpp  render_target.hpp  transform.cpp  transform.hpp
examples/sponza/systems/: camera_system.cpp  camera_system.hpp  mesh_renderer.cpp  mesh_renderer.hpp
public/: backrooms.html  (+2 more)
(+57 files in other folders)
